--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -14,6 +15,7 @@
     "@types/react": "^16.14.25",
     "@types/react-dom": "^16.9.15",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.27.2",
     "framer-motion": "^4.1.17",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
