--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^10.4.9",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^25.2.3",
-    "@types/node": "^12.20.50",
-    "@types/react": "^16.14.25",
-    "@types/react-dom": "^16.9.15",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.1.1",
+    "@types/jest": "^27.5.0",
+    "@types/node": "^17.0.31",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^6.3.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-icons": "^3.11.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.6.4",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
